syntax = "proto3";

option go_package = "github.com/trimble-oss/tierceron/installation/trclocal/trchelloworld/hellosdk";

package trcshtalksdk;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}